--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.0.12.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>5.1.10.Final</version>
+		</dependency>
 
 		<!-- Oracle JDBC driver -->
 		<dependency>
